# license-audit

./: CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  release.yml
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/CHANGELOG/: index.html
0.1.1/search/: search_index.json
0.1.1/user-guide/ci-integration/: index.html
0.1.1/user-guide/configuration/: index.html
0.10.0/: 404.html  index.html  sitemap.xml
0.10.0/CHANGELOG/: index.html
0.10.0/reference/comparison/: index.html
0.10.0/reference/how-it-works/: index.html
0.10.0/reference/limitations/: index.html
0.10.0/search/: search_index.json
0.10.0/user-guide/ci-integration/: index.html
0.10.0/user-guide/commands/: index.html
0.10.0/user-guide/configuration/: index.html
0.11.0/: 404.html  index.html  sitemap.xml
0.11.0/CHANGELOG/: index.html
0.11.0/reference/comparison/: index.html
0.11.0/reference/how-it-works/: index.html
0.11.0/reference/limitations/: index.html
0.11.0/search/: search_index.json
0.11.0/user-guide/ci-integration/: index.html
0.11.0/user-guide/commands/: index.html
0.11.0/user-guide/configuration/: index.html
0.12.0/: 404.html  index.html  sitemap.xml
0.12.0/CHANGELOG/: index.html
0.12.0/reference/comparison/: index.html
0.12.0/reference/how-it-works/: index.html
0.12.0/reference/limitations/: index.html
0.12.0/reference/report-schema/: index.html
0.12.0/search/: search_index.json
0.12.0/user-guide/ci-integration/: index.html
0.12.0/user-guide/commands/: index.html
0.12.0/user-guide/configuration/: index.html
0.12.1/: 404.html  index.html  sitemap.xml
0.12.1/CHANGELOG/: index.html
0.12.1/reference/comparison/: index.html
0.12.1/reference/how-it-works/: index.html
0.12.1/search/: search_index.json
0.12.2/: 404.html  index.html  objects.inv  sitemap.xml
0.12.2/CHANGELOG/: index.html
0.12.2/reference/: report-schema.json
0.12.2/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/CHANGELOG/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/CHANGELOG/: index.html
0.3.0/search/: search_index.json
0.8.0/: 404.html  index.html  sitemap.xml
0.8.0/CHANGELOG/: index.html
0.8.0/search/: search_index.json
0.9.0/: 404.html  index.html  sitemap.xml
0.9.0/CHANGELOG/: index.html
0.9.0/search/: search_index.json
docs/: CHANGELOG.md  index.md
docs/reference/: comparison.md  how-it-works.md  limitations.md  report-schema.md
docs/user-guide/: ci-integration.md  commands.md  configuration.md
scripts/: smoke.sh
src/license_audit/: config.py  util.py
tests/integration/: conftest.py  test_analyzer_e2e.py  test_cli_subprocess.py
tests/unit/: test_analyzer.py  test_classifier.py  test_compatibility.py  test_config.py  test_data_store.py  test_detection.py  test_expression.py  test_ignored_packages.py  test_models.py  test_policy.py  test_spdx.py  test_target_resolver.py  test_util.py
(+88 files in other folders)
